--- a/static/index.html
+++ b/static/index.html
@@ -23,4 +23,5 @@ A simple "Hello world" is implemented through controllers/hello.py and views/hel
 Immediate goals include routing for methods, so that a routing of /foo/bar will call the bar() method of controllers/foo.py and attempt to render views/foo/bar.tmpl
 
 <h3>0.2 (Weekend two, 11/28/09)</h3>
-It's thanksgiving weekend, so I don't expect to get too much work done on this. We are now resolving routes past the controller name to the method (ex: /foo/bar calls the bar() method of controllers/foo.py). This behavior can be modified by overriding the dispatch() function in controllers/__init__.py.
+It's thanksgiving weekend, so I don't expect to get too much work done on this. We are now resolving routes past the controller name to the method (ex: /foo/bar calls the bar() method of controllers/foo.py). This behavior can be modified by overriding the dispatch() function in controllers/__init__.py. 
+Immediate goals include switching mod_python out for mod_wsgi.
